se agrego el servicio que realiza la consulta a la bd de los datos del archivo
